# Write-ups

CTFs/python-rev-for-freaks/: README.md  python_freak_deobf.py  python_freak_versions.py  pytohn_freak_reversed.py
CrackMe/symbolic_rev/: README.md  rev.cpp  solution.py  solution2.py
CrackMe/vm_crackme/: README.md  flag.txt
CrackMe/vm_crackme/Scripts/: devirtualizator.py  devirtualized.asm  devirtualized.txt  disassembled.txt  disassembler.py
CrackMe/vm_crackme/llvm/: CMakeLists.txt  main.cpp
CrackMe/vm_crackme/llvm/scripts/: devirt_body.c  devirt_toolchain.bat
CrackMe/vm_crackme/llvm/src/: devirtualizer.cpp  devirtualizer.h  disassembler.cpp  disassembler.h  lifter.cpp  lifter.h  vm_handlers.cpp  vm_handlers.h  vm_info.h
MalwareAnalysis/AgentTesla_a27b90af0efe1643f641173c2a2efcb9eba21a9b4e2b13b8aa7513665fb490d7/: Malwares.7z  Malwares.txt  README.md
MalwareAnalysis/AgentTesla_a27b90af0efe1643f641173c2a2efcb9eba21a9b4e2b13b8aa7513665fb490d7/Scripts/: CommonHelper.py  LoadedFile3Helper.py  LoadedFile4Helper.py
MalwareAnalysis/ColibriLoader_030340b93655a258d69c01e334877bb36a49a5fafd23927216020b99a3e3c738/: Malwares.7z  README.md
MalwareAnalysis/ColibriLoader_030340b93655a258d69c01e334877bb36a49a5fafd23927216020b99a3e3c738/ApiHashes/: Advapi32.txt  Crypt32.txt  Kernel32.txt  Ntdll.txt  Shell32.txt  Shlwapi.txt  User32.txt  Wininet.txt
MalwareAnalysis/ColibriLoader_030340b93655a258d69c01e334877bb36a49a5fafd23927216020b99a3e3c738/Scripts/: api_resolve.py  input_file.py  (+1 more)
python-rev-for-freaks/: README.md  python_freak_unpack.py  python_freak_unpacked.py
